v2.10.0/_sources/plugins/feature_templates_wireless_clean_air_configurations_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.feature_templates_wireless_clean_air_configurations module -- Resource module for Feature Templates Wireless Clean Air Configurations
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.10.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.feature_templates_wireless_clean_air_configurations`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.18.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operations create, update and delete of the resource Feature Templates Wireless Clean Air Configurations.
- This API allows users to create a CleanAir configuration feature template.
- This API allows users to delete a specific CleanAir configuration feature template by ID.
- This API allows users to update the details of a specific CleanAir configuration feature template by ID.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.6.0.2
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-designName"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-designname:

      .. rst-class:: ansible-option-title

      **designName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-designName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The feature template design name. \`Note \` The following characters are not allowed % & \< \> ' /.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes:

      .. rst-class:: ansible-option-title

      **featureAttributes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Feature Templates Wireless Clean Air Configurations's featureAttributes.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/cleanAir"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/cleanair:

      .. rst-class:: ansible-option-title

      **cleanAir**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/cleanAir" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Clean Air.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/cleanAirDeviceReporting"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/cleanairdevicereporting:

      .. rst-class:: ansible-option-title

      **cleanAirDeviceReporting**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/cleanAirDeviceReporting" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CleanAir Device Reporting.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/description"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/description:

      .. rst-class:: ansible-option-title

      **description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      CleanAir Description.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures:

      .. rst-class:: ansible-option-title

      **interferersFeatures**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Feature Templates Wireless Clean Air Configurations's interferersFeatures.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/bleBeacon"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/blebeacon:

      .. rst-class:: ansible-option-title

      **bleBeacon**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/bleBeacon" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      BLE Beacon is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/bluetoothPagingInquiry"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/bluetoothpaginginquiry:

      .. rst-class:: ansible-option-title

      **bluetoothPagingInquiry**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/bluetoothPagingInquiry" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Bluetooth Paging Inquiry is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/bluetoothScoAcl"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/bluetoothscoacl:

      .. rst-class:: ansible-option-title

      **bluetoothScoAcl**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/bluetoothScoAcl" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Bluetooth SCO ACL is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/continuousTransmitter"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/continuoustransmitter:

      .. rst-class:: ansible-option-title

      **continuousTransmitter**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/continuousTransmitter" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Continuous Transmitter is applicable for Radio Bands 2\_4GHZ, 5GHZ, 6GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/genericDect"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/genericdect:

      .. rst-class:: ansible-option-title

      **genericDect**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/genericDect" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Generic DECT is only applicable for Radio Bands 2\_4GHZ, 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/genericTdd"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/generictdd:

      .. rst-class:: ansible-option-title

      **genericTdd**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/genericTdd" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Generic TDD is only applicable for Radio Band 2\_4GHZ, 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/jammer"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/jammer:

      .. rst-class:: ansible-option-title

      **jammer**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/jammer" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Jammer is only applicable for Radio Band 2\_4GHZ, 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/microwaveOven"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/microwaveoven:

      .. rst-class:: ansible-option-title

      **microwaveOven**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/microwaveOven" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Microwave Oven is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/motorolaCanopy"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/motorolacanopy:

      .. rst-class:: ansible-option-title

      **motorolaCanopy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/motorolaCanopy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Motorola Canopy is only applicable for Radio Band 2\_4GHZ, 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/siFhss"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/sifhss:

      .. rst-class:: ansible-option-title

      **siFhss**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/siFhss" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      SI FHSS is only applicable for Radio Band 2\_4GHZ, 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/spectrum80211Fh"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/spectrum80211fh:

      .. rst-class:: ansible-option-title

      **spectrum80211Fh**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/spectrum80211Fh" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Spectrum 802.11 FH is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/spectrum80211NonStandardChannel"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/spectrum80211nonstandardchannel:

      .. rst-class:: ansible-option-title

      **spectrum80211NonStandardChannel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/spectrum80211NonStandardChannel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Spectrum 802.11 Non STD Channel is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/spectrum802154"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/spectrum802154:

      .. rst-class:: ansible-option-title

      **spectrum802154**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/spectrum802154" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Spectrum 802.15.4 is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/spectrumInverted"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/spectruminverted:

      .. rst-class:: ansible-option-title

      **spectrumInverted**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/spectrumInverted" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Spectrum Inverted is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/superAg"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/superag:

      .. rst-class:: ansible-option-title

      **superAg**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/superAg" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Super AG is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/videoCamera"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/videocamera:

      .. rst-class:: ansible-option-title

      **videoCamera**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/videoCamera" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Video Camera is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/wimaxFixed"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/wimaxfixed:

      .. rst-class:: ansible-option-title

      **wimaxFixed**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/wimaxFixed" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      WiMAX Fixed is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/wimaxMobile"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/wimaxmobile:

      .. rst-class:: ansible-option-title

      **wimaxMobile**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/wimaxMobile" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      WiMAX Mobile is only applicable for Radio Band 2\_4GHZ and 5GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/interferersFeatures/xbox"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/interferersfeatures/xbox:

      .. rst-class:: ansible-option-title

      **xbox**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/interferersFeatures/xbox" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Xbox is only applicable for Radio Band 2\_4GHZ.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/persistentDevicePropagation"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/persistentdevicepropagation:

      .. rst-class:: ansible-option-title

      **persistentDevicePropagation**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/persistentDevicePropagation" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Persistent Device Propagation.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-featureAttributes/radioBand"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-featureattributes/radioband:

      .. rst-class:: ansible-option-title

      **radioBand**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-featureAttributes/radioBand" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Radio Band.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter. Clean Air Configuration Feature Template Id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-unlockedAttributes"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-unlockedattributes:

      .. rst-class:: ansible-option-title

      **unlockedAttributes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-unlockedAttributes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Attributes unlocked in design can be changed at device provision time. \`Note \` unlockedAttributes can only contain the first level attributes defined under featureAttributes.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are wireless.Wireless.create\_clean\_air\_configuration\_feature\_template, wireless.Wireless.delete\_clean\_air\_configuration\_feature\_template, wireless.Wireless.update\_clean\_air\_configuration\_feature\_template,
   - Paths used are post /dna/intent/api/v1/featureTemplates/wireless/cleanAirConfigurations, delete /dna/intent/api/v1/featureTemplates/wireless/cleanAirConfigurations/{id}, put /dna/intent/api/v1/featureTemplates/wireless/cleanAirConfigurations/{id},
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco Catalyst Center documentation for Wireless CreateCleanAirConfigurationFeatureTemplate <https://developer.cisco.com/docs/dna-center/#!create-clean-air-configuration-feature-template>`_
       Complete reference of the CreateCleanAirConfigurationFeatureTemplate API.
   `Cisco Catalyst Center documentation for Wireless DeleteCleanAirConfigurationFeatureTemplate <https://developer.cisco.com/docs/dna-center/#!delete-clean-air-configuration-feature-template>`_
       Complete reference of the DeleteCleanAirConfigurationFeatureTemplate API.
   `Cisco Catalyst Center documentation for Wireless UpdateCleanAirConfigurationFeatureTemplate <https://developer.cisco.com/docs/dna-center/#!update-clean-air-configuration-feature-template>`_
       Complete reference of the UpdateCleanAirConfigurationFeatureTemplate API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Create
      cisco.catalystcenter.feature_templates_wireless_clean_air_configurations:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: present
        designName: string
        featureAttributes:
          cleanAir: true
          cleanAirDeviceReporting: true
          description: string
          interferersFeatures:
            bleBeacon: true
            bluetoothPagingInquiry: true
            bluetoothScoAcl: true
            continuousTransmitter: true
            genericDect: true
            genericTdd: true
            jammer: true
            microwaveOven: true
            motorolaCanopy: true
            siFhss: true
            spectrum80211Fh: true
            spectrum80211NonStandardChannel: true
            spectrum802154: true
            spectrumInverted: true
            superAg: true
            videoCamera: true
            wimaxFixed: true
            wimaxMobile: true
            xbox: true
          persistentDevicePropagation: true
          radioBand: string
        unlockedAttributes:
          - string
    - name: Delete by id
      cisco.catalystcenter.feature_templates_wireless_clean_air_configurations:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: absent
        id: string
    - name: Update by id
      cisco.catalystcenter.feature_templates_wireless_clean_air_configurations:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        state: present
        designName: string
        featureAttributes:
          cleanAir: true
          cleanAirDeviceReporting: true
          description: string
          interferersFeatures:
            bleBeacon: true
            bluetoothPagingInquiry: true
            bluetoothScoAcl: true
            continuousTransmitter: true
            genericDect: true
            genericTdd: true
            jammer: true
            microwaveOven: true
            motorolaCanopy: true
            siFhss: true
            spectrum80211Fh: true
            spectrum80211NonStandardChannel: true
            spectrum802154: true
            spectrumInverted: true
            superAg: true
            videoCamera: true
            wimaxFixed: true
            wimaxMobile: true
            xbox: true
          persistentDevicePropagation: true
          radioBand: string
        id: string
        unlockedAttributes:
          - string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.feature_templates_wireless_clean_air_configurations_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"taskId": "string", "url": "string"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

